Fix overflow when right sidebar is collapsing

--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -1,6 +1,10 @@
 @use "../variables";
 @use "../vendor/font-awesome/variables" as fa-variables;
 
+#wrapper {
+  overflow-x: hidden;
+}
+
 #main {
   @if variables.$css-grid-layout {
     display: grid;
